# ready_set_boole

./: .gitmodules  Adder.hs  Boolean_Evaluation.hs  Gray_code.hs  Multiplier.hs  README.md  adder.hs  boolean_evaluation.hs  compile_commands.json  gray_code.hs  meson.build  multiplier.hs
2truthTable/: TT.cpp  TT.hpp
adder/: adder.cpp  adder.hpp  meson.build  test_adder.cpp
ast/: ASTree.cpp  ASTree.hpp  Node.cpp  Parser.cpp  meson.build  test.cpp
ast/source/: ASTree.hpp  CMakeLists.txt  Node.cpp  Parser.cpp  compile_commands.json  test.cpp
boolean_evaluation/: ast.cpp  ast.hpp  astNode.hpp  boolean_evaluation.cpp  eval_formula.cpp  eval_formula.hpp  main.cpp  meson.build  test_eval_formula.cpp
conjunctive_normal_form/: CNFPattern.cpp  CNFPattern.hpp  CNForm.cpp  CNForm.hpp  Pattern.cpp  Pattern.hpp  meson.build  test_cnf.cpp
curve/: main.cpp  map.cpp  map.hpp  meson.build  test_map.cpp
gray_code/: gray_code.cpp  gray_code.hpp  meson.build  test_gray_code.cpp
inverse_function/: main.cpp  meson.build  reverse_map.cpp  reverse_map.hpp  test_reverse_map.cpp
multiplier/: meson.build  multiplier.cpp  multiplier.hpp  test.cpp  test_multiplier.cpp
negation_normal_form/: NNFPattern.cpp  NNFPattern.hpp  NNForm.cpp  NNForm.hpp  Node.cpp  Parser.cpp  compile_commands.json  meson.build  test.cpp  test_nnf.cpp
normal_negation_form/: 3Patterns.cpp  ASTree.hpp  NNForm.cpp  NNForm.hpp  Node.cpp  Parser.cpp  Pattern.cpp  Pattern.hpp  nnfast.cpp
normal_negation_form/spirit/: 2Proto.cpp  Proto.cpp
powerset/: meson.build  powerset.cpp  powerset.hpp  test.cpp  test_powerset.cpp
sat/: meson.build  sat.cpp  sat.hpp  test.cpp  test_sat.cpp
set_evaluation/: eval_set.cpp  eval_set.hpp  main.cpp  meson.build  set.cpp  test_eval_set.cpp
subprojects/: libmorton.wrap
truth_table/: ASTree.hpp  Node.cpp  Parser.cpp  RpnEvaluator.cpp  RpnEvaluator.hpp  TT.hpp  TTLogic.cpp  TTUtils.cpp  TruthTable.cpp  TruthTable.hpp  boolean_evaluation.cpp  compile_commands.json  main.cpp  meson.build  test.cpp  test_truth_table.cpp  truth_table.cpp  truth_table.hpp
